# systemd-service-gui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-appimage.yml
packaging/appimage/: icers.desktop  systemd-service-gui.desktop
scripts/: build-appimage.sh  install-latest-appimage.sh
src/: main.rs  systemd.rs
