[package]
name = "systemd-service-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["svg"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
